<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/txt_campo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginTop="180dp"
            android:text="@string/campo_usuario"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/campo_usuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#F1EEEE"
            android:ellipsize="start"
            android:ems="10"
            android:inputType="text"

            android:textColor="#000000" />
        <TextView
            android:id="@+id/txt_campo_contrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/campo_contrasenya"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/campo_contrasenya"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#F1EEEE"
            android:ellipsize="start"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/btn_iniciar_sesion" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/txt_sin_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"

                android:text="@string/txt_sin_cuenta"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/btn_registrarse" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

</RelativeLayout>