<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".activities.RegistroActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"

        >


        <TableRow
            android:gravity="center"
            android:padding="18dp">

            <TextView
                android:id="@+id/app_name"
                android:text="@string/app_name"
                android:textSize="40sp" />
        </TableRow>


        <TableRow
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_registro_nuevo_usuario"
                android:layout_gravity="center"
                android:text="@string/txt_registro_nuevo_usuario"
                android:textSize="25sp" />
        </TableRow>



        <TableRow

            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="120dp"
            >

            <com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/registro_campo_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_usuario"
                    android:drawablePadding="10dp"
                    android:hint="@string/registro_campo_usuario"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:gravity="center"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/registro_campo_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/registro_campo_email"
                    android:inputType="textEmailAddress"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:gravity="center"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/registro_campo_contrasenya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_contrasenya"
                    android:drawablePadding="10dp"
                    android:hint="@string/registro_campo_contrasenya"
                    android:inputType="textPassword"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:gravity="center"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/registro_campo_confirmar_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_contrasenya"
                    android:drawablePadding="10dp"
                    android:hint="@string/registro_campo_confirmar_contraseña"
                    android:inputType="textPassword"
                    android:padding="18dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/registro_btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_btn_registrar"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:padding="20dp"
            >

            <Button
                android:id="@+id/registro_volver_inicio_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000C0808"
                android:textSize="14sp"
                android:text="@string/registro_volver_inicio_sesion"
                android:textColor="#020000"
                />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>