<?xml version="1.0" encoding="utf-8"?>

<!-- Diseño de la pantalla para registrar o modificar notas -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_notas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNotasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Muestra el titulo de la pantalla -->
        <TextView
            android:id="@+id/title_add_notas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_notes"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:padding="5dp"/>

        <!-- Permite indicar si la nota es necesaria o no -->
        <CheckBox
            android:id="@+id/check_selected_nota"
            android:text="Marcar Nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <!-- Indica que dato se debe introducir en el campo que le sigue -->
        <TextView
            android:id="@+id/txt_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nota" />

        <!-- Permite introducir el nombre de la nota -->
        <EditText
            android:id="@+id/campo_nota"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Indica que dato se debe introducir en el campo que le sigue -->
        <TextView
            android:id="@+id/txt_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_descripcion_nota" />

        <!-- Permite introducir la descripción de la nota -->
        <EditText
            android:id="@+id/campo_descripcion_nota"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <!-- Cierra la activity sin guardar nada -->
            <Button
                android:id="@+id/btn_salir_nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_salir_nota" />

            <!-- Elimina los datos introducidos y cierra la activity -->
            <Button
                android:id="@+id/btn_eliminar_nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_eliminar_nota" />

            <!-- Guarda los datos introducidos y cierra la activity -->
            <Button
                android:id="@+id/btn_guardar_nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/btn_guardar_nota" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>

</RelativeLayout>